--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/native": "^7.1.19",
+    "@react-navigation/stack": "^7.6.1",
+    "buffer": "^6.0.3",
     "expo": "~54.0.20",
+    "expo-av": "~16.0.7",
+    "expo-device": "~8.0.9",
+    "expo-notifications": "~0.32.12",
+    "expo-print": "~15.0.7",
+    "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
+    "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-blob-util": "^0.23.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^4.0.3"
   },
   "private": true
 }
